fix(app): book meta section mobile styling

--- a/app/styles/Book.module.css
+++ b/app/styles/Book.module.css
@@ -366,6 +366,8 @@
   }
   .intro {
     margin: 300px 150px 100px 500px;
+    margin: 0 150px;
+    padding: 150px 75px 75px 75px;
   }
   .intro p {
     font-size: 55px;
@@ -377,7 +379,7 @@
     margin-bottom: 50px;
   }
   .intro_block:nth-child(1) .intro_image_wrapper {
-    right: -150px;
+    right: -225px;
     bottom: 35px;
   }
   .intro_block:nth-child(1) .intro_image_wrapper_single {
@@ -385,7 +387,7 @@
     bottom: -500px;
   }
   .intro_block:nth-child(2) .intro_image_wrapper {
-    left: -350px;
+    left: -225px;
     bottom: -700px;
   }
   .intro_image_wrapper {
@@ -397,7 +399,7 @@
   .meta {
     font-size: 30px;
     line-height: 1.2;
-    margin: 350px 100px 100px 100px;
+    margin: 300px 100px 100px 100px;
     row-gap: 50px;
   }
   .meta .date, .meta .publishers {
@@ -535,7 +537,8 @@
     height: 80vh;
   }
   .intro {
-    margin: 300px 150px 100px 250px;
+    margin: 0 125px;
+    padding: 130px 60px 60px 60px;
   }
   .intro p {
     font-size: 40px;
@@ -546,7 +549,7 @@
     margin-bottom: 40px;
   }
   .intro_block:nth-child(1) .intro_image_wrapper {
-    right: -150px;
+    right: -185px;
     bottom: 25px;
   }
   .intro_block:nth-child(1) .intro_image_wrapper_single {
@@ -554,7 +557,7 @@
     bottom: -500px;
   }
   .intro_block:nth-child(2) .intro_image_wrapper {
-    left: -250px;
+    left: -185px;
     bottom: -600px;
   }
   .intro_image_wrapper {
@@ -566,7 +569,7 @@
   .meta {
     font-size: 24px;
     letter-spacing: 0px;
-    margin: 350px 100px 100px 100px;
+    margin: 200px 100px 100px 100px;
     row-gap: 50px;
   }
   .meta .date, .meta .publishers {
@@ -692,10 +695,61 @@
 }
 
 @media screen and (max-width: 1023px) {
+  .hero {
+    margin: 75px 75px 100px 75px;
+    display: flex;
+    flex-direction: column;
+  }
+  .hero h1 {
+    margin-bottom: 0;
+    z-index: 1;
+    max-width: 800px;
+  }
+  .cover_wrapper {
+    height: 70vh;
+  }  
+  .intro {
+    margin: 0 75px;
+    padding: 100px 0px 60px 0px;
+  }
   .intro p {
     font-size: 34px;
     letter-spacing: 3.5px;
     margin-top: 35px;
+  }
+  .intro_block:nth-child(1) .intro_image_wrapper {
+    right: -75px;
+    bottom: 0px;
+  }
+  .intro_block:nth-child(1) .intro_image_wrapper_single {
+    left: -250px;
+    bottom: -500px;
+  }
+  .intro_block:nth-child(2) .intro_image_wrapper {
+    left: -75px;
+    bottom: -500px;
+  }
+  .intro_image_wrapper {
+    max-width: 350px;
+  }
+  .intro_image_wrapper_single {
+    max-width: 450px;
+  }
+  .meta {
+    font-size: 18px;
+    margin: 0px 50px 50px 50px;
+    row-gap: 25px;
+  }
+  .meta .date, .meta .publishers {
+    width: 40vw;
+    max-width: 500px;
+    margin-left: 50vw;
+  }
+  .meta .accolades {
+    max-width: 500px;
+    width: 40vw;
+    margin-left: 50vw;
+    align-self: end;
   }
 }
 
@@ -706,14 +760,45 @@
     grid-template-columns: 1fr;
   }
   .cover_wrapper {
-    height: 80vh;
+    height: 70vh;
     position: relative;
     z-index: 0;
+  }
+  .intro {
+    margin: 0 37px;
+    padding: 37px 0px 60px 0px;
   }
   .intro p {
     font-size: 22px;
     letter-spacing: 2.5px;
-    line-height: 20px;
     margin-top: 15px;
+  }
+  .intro_image_wrapper {
+    max-width: 350px;
+  }
+  .intro_image_wrapper_single {
+    max-width: 450px;
+  }
+  .intro_image_wrapper {
+    position: static;
+    max-width: 690px;
+  }
+  .intro_image_wrapper_single {
+    position: relative;
+    max-width: 820px;
+  }
+  .meta {
+    margin: 0px 37px 50px 37px;
+    row-gap: 25px;
+  }
+  .meta .date, .meta .publishers {
+    width: 100%;
+    margin-left: 0px;
+    max-width: unset;
+  }
+  .meta .accolades {
+    width: 100%;
+    margin-left: 0px;
+    max-width: unset;
   }
 }
